--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/IMG_20231126_170001.jpg" alt="" /></a>
-					<h1><strong>Guía Local en el Amazonas<br />
-						vive la naturaleza <br /> en estado puro.<br />
-						<br />
-						Navega, camina y descubre <br />
-						donde la selva cuenta sus secretos.</strong>
+
+					<a href="#" class="image avatar"><img src="images/Santos_avatar.jpg" alt="" /></a>
+					<h1><strong>JAGUAR AMAZÓNICO<br />GUIA LOCAL<br /><br />
+						Navega, camina y <br />descubre
+						donde la selva <br />cuenta sus secretos.<br />
+						Vive la naturaleza <br /> en estado puro.</h1></strong>
 				<!-- Header 
 						vive la <br />
 					Naturaleza en Estado Puro. <br />
@@ -35,12 +35,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><strong>JAGUAR AMAZÓNICO</strong><br />
+							<h2><strong>TU GUÍA LOCAL EN EL AMAZONAS</strong><br />
 							Tu aventura, tu experiencia, tu viaje personalizado</h2>
 						</header>
 						<p>SUMÉRGETE EN LA MAGIA DEL AMAZONAS COLOMBIANO</p>
-						<p>Bienvenido a una Aventura Única: Experimenta la biodiversidad en su máxima expresión con nuestro guía local experto. Desde excursiones en canoa hasta caminatas por senderos selváticos, cada momento es una oportunidad para descubrir la magia del Amazonas colombiano.</p>
-						<a href="#one" class="more scrolly">Saber más</a>
+						<a href="#two" class="more scrolly">Saber más</a>
+						<p><br />Bienvenido a una Aventura Única: Experimenta la biodiversidad en su máxima expresión con nuestro guía local experto. Desde excursiones en canoa hasta caminatas por senderos selváticos, cada momento es una oportunidad para descubrir la magia del Amazonas colombiano.</p>
+						<a href="#three" class="more scrolly">Contáctame</a>
 					</section>
 
 				<!-- Two -->
@@ -48,73 +49,88 @@
 						<h2>Qué ofrezco</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/IMG_20231127_091722.jpg" class="image fit thumb"><img src="images/IMG_20231127_091722.jpg" alt="" /></a>
-								<h3>Caminatas ecológicas en la selva</h3>
-								<p align="justify">Sumérgete en la exuberante biodiversidad del Amazonas a través de caminatas acompañados del guía local experto en la observación de plantas, insectos y animales</p>
+								<a href="images/Caminata.jpg" class="image fit thumb"><img src="images/Caminata.jpg" alt="" /></a>
+								<h3>Caminata Ecológica en la Selva (diurnas/nocturnas)</h3>
+								<p align="justify">Sumérgete en la exuberante biodiversidad del Amazonas a través de caminatas acompañados del guía local experto en la observación de plantas, insectos y animales. Cada recorrido es una oportunidad para presenciar la belleza natural en su máxima expresión.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/IMG-20231126-WA0019.jpg" class="image fit thumb"><img src="images/IMG-20231126-WA0019.jpg" alt="" /></a>
+								<a href="images/Comunidades.jpg" class="image fit thumb"><img src="images/Comunidades.jpg" alt="" /></a>
 								<h3>Visitas a Comunidades Indígenas</h3>
 								<p align="justify">Conéctate con las culturas locales, comparte experiencias auténticas y descubre la vida cotidiana en las comunidades amazónicas. Sumérgete en la riqueza cultural aprende sobre sus tradiciones y participa en experiencias únicas.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/delfin.JPG" class="image fit thumb"><img src="images/delfin.JPG" alt="" /></a>
+								<h3>Avistamiento de Delfines Rosados y Grises</h3>
+								<p align="justify">Nuestro recorrido te lleva por los rincones, donde podrás presenciar de cerca la gracia y la vitalidad de estos magníficos delfines únicos y con gran interés para la conservación.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/Tarapoto.jpg" class="image fit thumb"><img src="images/Tarapoto.jpg" alt="" /></a>
+								<h3>Pesca deportiva y baño en el Lago Tarapoto</h3>
+								<p align="justify">El hermoso lago Tarapoto ubicado en pleno corazón del Amazonas, donde la tranquilidad y los sonidos de la selva que te enamorarán con sus grandes atardeceres. Sumérgete en esta experiencia increíble donde podrás bañarte, pescar, avistar delfines rosados, aves o caimanes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/Peru.jpg" class="image fit thumb"><img src="images/Peru.jpg" alt="" /></a>
+								<h3>Explora el Amazonas Peruano</h3>
+								<p align="justify">Adéntrate en el Amazonas Peruano, donde guías expertos te llevarán a traves de la selva, donde te mostrarán plantas exóticas, inménsos árboles (atrévete con la liana!), coloridas aves, y mamíferos fascinantes como los micos o el oso perezoso.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/pirarocu1.JPG" class="image fit thumb"><img src="images/pirarocu1.JPG" alt="" /></a>
+								<h3>Descubre el Pirarucú, el gigante pez amazónico</h3>
+								<p align="justify">Imposible quedar indiferente a uno de los peces de agua dulce más grandes del mundo, emergiendo del agua mostrando los colores únicos de sus escamas. El emblemático Pirarucú, en peligro de extinción, que ha sido fuente vital de alimento para las comunidades, y que podrás contemplar en lagunas de cría, ya que su preservación es esencial.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/Regia1.jpg" class="image fit thumb"><img src="images/Regia1.jpg" alt="" /></a>
+								<h3>Sorpréndete con la inmensa Victoria Regia</h3>
+								<p align="justify">Emociónate con la magestuosidad de la Victoria Regia, la reina de los nenúfares. Un espectáculo único donde estas enormes hojas floantes se despliegan alcanzando diámetros impresionantes. Un paisaje inigualable y mágico de la abundancia natural de la región.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/tucan.jpg" class="image fit thumb"><img src="images/tucan.jpg" alt="" /></a>
+								<h3>Observación de Aves</h3>
+								<p align="justify">Amazonas, paraíso ornitológico, hogar de una asombrosa diversidad de aves. Los vibrantes colores de los tucanes o el espectacular sonido de los mochileros. Cada instante ofrece la posibilidad de inmortalizar plumajes deslumbrantes, sonidos increíbles, comportamientos únicos, nidos que son verdaderas obras de ingeniería. </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/perezoso.jpg" class="image fit thumb"><img src="images/perezoso.jpg" alt="" /></a>
+								<h3>Observa a los osos perezosos</h3>
+								<p align="justify">Imposible quedar indiferente a uno de los peces de agua dulce más grandes del mundo, emergiendo del agua mostrando los colores únicos de sus escamas. El emblemático Pirarucú, en peligro de extinción, que ha sido fuente vital de alimento para las comunidades, y que podrás contemplar en lagunas de cría, ya que su preservación es esencial.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/caiman.jpg" class="image fit thumb"><img src="images/caiman.jpg" alt="" /></a>
+								<h3>Avistamiento de Caimanes</h3>
+								<p align="justify">Experimenta la emocionante y misteriosa vida nocturna del Amazonas con el avistamiento de caimanes en su hábitat natural. Descubre la vida de los caimanes mientras deambulan por las orillas de los ríos y se deslizan silenciosamente en las aguas.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/mico.jpg" class="image fit thumb"><img src="images/mico.jpg" alt="" /></a>
+								<h3>Conoce los divertidos micos</h3>
+								<p align="justify">Asómbrate con las espectaculares acrobacias y aullidos de los micos en su medio natural. Descubre la diversidad, sus características únicas y comportamientos te dejarán maravillado, reconocidos por su astucia, destrezas y complejas estructuras sociales.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/Comida1.jpg" class="image fit thumb"><img src="images/Comida1.jpg" alt="" /></a>
+								<h3>Gastronomía y artesanías locales en las Comunidades</h3>
+								<p align="justify">Saborea el auténtico Amazonas y apoya a las comunidades locales adquiriendo artesanías auténticas, llevando contigo recuerdos únicos y contribuyendo al desarrollo sostenible.</p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
+					<a href="Fotos.html" class="more scrolly">Ver Galería Fotográfica de Experiencias</a>
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
+						<h2>Contáctame</h2>
+						<p>Si quieres saber más, no dudes en comunicarte conmigo vía whatsapp o email.</p>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										+57 3105591531
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">santospacaya@gmail.com</a>
+									</li>
+									<li>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										Puerto Nariño<br />
+										Amazonas<br />
+										COLOMBIA
 									</li>
 								</ul>
 							</div>
@@ -449,8 +465,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<h1><strong>santospacaya@gmail.com</strong></h1>
-						<h1><strong>santospacaya@gmail.com</strong></h1>
+						<h1><strong>whatsapp: +57 3105591531</strong></h1>
+						<h1><strong>mail: santospacaya@gmail.com</strong></h1>
 					</ul>
 				</div>
 			</footer>
