--- a/Fotos.html
+++ b/Fotos.html
@@ -11,7 +11,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Guía Jaguar Amazónico</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 				<div class="inner">
 
 					<a href="#" class="image avatar"><img src="images/Santos_avatar.jpg" alt="" /></a>
-					<h1><strong>JAGUAR AMAZÓNICO<br />GUIA LOCAL<br /><br />
+					<h1><strong>JAGUAR AMAZÓNICO <br/> GUIA LOCAL<br /><br />
 						Navega, camina y <br />descubre
 						donde la selva <br />cuenta sus secretos.<br />
 						Vive la naturaleza <br /> en estado puro.</h1></strong>
